Update CICD documentation